# LLM-TRACE

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: default_config.json
data/raw/: README.md
llm_trace/: __init__.py  demo_data.py  main.py  pipeline.py  schemas.py
llm_trace/chief_engineer/: prompt.py  router.py
llm_trace/extraction/: __init__.py  extractor.py  (+2 more)
src/: pyproject.toml  requirements.txt
src/configs/: default_config.json
src/llm_trace/: __init__.py  annotation_schema.py  check_annotations.py  checkpointing.py  dataset.py  main.py  pipeline.py  schemas.py  training.py
src/llm_trace/chief_engineer/: __init__.py  client.py  router.py
src/llm_trace/eval/: __init__.py  metrics.py
src/llm_trace/extraction/: entity_extractor.py  extractor.py  relation_extractor.py
src/llm_trace/fusion/: __init__.py  dpfc.py  pmca.py
src/llm_trace/graph/: __init__.py  tm_cgb.py
src/llm_trace/models/: __init__.py  backends.py  graph_encoder.py  heads.py  llm_trace_model.py  losses.py  neural_experts.py
src/llm_trace/parsers/: evidence_builder.py  image_parser.py  workbook_parser.py
src/llm_trace/utils/: config.py
src/rawdata/annotations/: chief_engineer_OP40.cached.json  stamping_process_sheet_OP40.jsonl
src/rawdata/images/: stamping_process_sheet_OP40_regions.json
src/rawdata/manuals/: stamping_process_rules.json
src/rawdata/symbols/: stamping_process_sheet_OP40_symbols.json  symbol_vocab.txt
src/rawdata/workbooks/: stamping_process_sheet_OP40.csv
src/tests/: test_rawdata_parser_alignment.py
tests/: test_demo_pipeline.py
(+15 files in other folders)
